--- a/src/App.scss
+++ b/src/App.scss
@@ -124,6 +124,7 @@
   display:block;
   margin: auto;
   margin-bottom: 2rem;
+  margin-top: 2rem;
   text-align:center;
 }
 .heroCategory{
@@ -154,20 +155,32 @@
 }
 .buttonNav{
   background-color: #f8ad3c;
-    border:none;
+  border:none;
+  margin-right: 30px;
 }
-
+.buttonNav:hover{
+      background-color: white;
+      color: #f8ad3c;
+    }
+.buttonNav:onclick{
+  background-color: white;
+      color: #f8ad3c;
+}
+.mr-sm-2{
+margin-left: 20rem;
+}
 /*card*/
 .card-custom{
-  text-align: center;
-  
+  text-align: center;  
   border: none;
-  margin: 0 auto; /* Added */
-  float: none; /* Added */
+  margin: 0 auto; 
+  float: none; 
   margin-bottom: 80px;
   margin-left: 30px;
   margin-right: 30px;
   align-items: stretch;
+  box-shadow: 7px 7px 7px #a5875b9f;
+ 
   .card-header{
     font-size: 30px;
     font-weight: 700;
@@ -256,4 +269,14 @@
   .alertdescription{
     font-size: 30px;
   }
+}
+
+/*Carrello*/
+.boxTable{
+  margin: 50px;
+  text-align: center;
+  border: 0,5px solid black;
+  background-color:white;
+  margin-bottom: 100%;
+  
 }
